// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductTourFlowCard > renders correctly 1`] = `
<v-card-stub
  border="false"
  data-v-f9aad838=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  theme="light"
  tile="false"
  variant="elevated"
  width="400"
>
  <img
    alt=""
    data-v-f9aad838=""
    src="imageAsset"
    width="400"
  />
  <v-progress-linear-stub
    absolute="false"
    active="true"
    buffervalue="0"
    chunkgap="4"
    class="mt-n2"
    clickable="false"
    data-v-f9aad838=""
    height="8"
    indeterminate="false"
    location="top"
    max="100"
    modelvalue="50"
    reverse="false"
    roundedbar="false"
    stream="false"
    striped="false"
    tag="div"
    tile="false"
  />
  <v-card-title-stub
    class="flow-card-title"
    data-v-f9aad838=""
    tag="div"
  >
    Step 1
  </v-card-title-stub>
  <v-card-text-stub
    class="pb-2 px-6"
    data-v-f9aad838=""
    tag="div"
  >
    
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 1 line 1
      </p>
      <br
        data-v-f9aad838=""
      />
    </div>
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 1 line 2
      </p>
      <!--v-if-->
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-f9aad838=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      data-v-f9aad838=""
      tag="div"
    />
    <!--v-if-->
    <evocon-v-button-stub
      color="primary"
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Next_noun"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</v-card-stub>
`;

exports[`ProductTourFlowCard > renders correctly if currentStepIndex is 1 1`] = `
<v-card-stub
  border="false"
  data-v-f9aad838=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  theme="light"
  tile="false"
  variant="elevated"
  width="400"
>
  <img
    alt=""
    data-v-f9aad838=""
    src="imageAsset"
    width="400"
  />
  <v-progress-linear-stub
    absolute="false"
    active="true"
    buffervalue="0"
    chunkgap="4"
    class="mt-n2"
    clickable="false"
    data-v-f9aad838=""
    height="8"
    indeterminate="false"
    location="top"
    max="100"
    modelvalue="100"
    reverse="false"
    roundedbar="false"
    stream="false"
    striped="false"
    tag="div"
    tile="false"
  />
  <v-card-title-stub
    class="flow-card-title"
    data-v-f9aad838=""
    tag="div"
  >
    Step 2
  </v-card-title-stub>
  <v-card-text-stub
    class="pb-2 px-6"
    data-v-f9aad838=""
    tag="div"
  >
    
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 2
      </p>
      <!--v-if-->
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-f9aad838=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      data-v-f9aad838=""
      tag="div"
    />
    <evocon-v-button-stub
      color="quaternary-dark"
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Back"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Ok"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</v-card-stub>
`;

exports[`ProductTourFlowCard > renders correctly if currentStepIndex is 1, but that step is missing showBackBtn boolean 1`] = `
<v-card-stub
  border="false"
  data-v-f9aad838=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  theme="light"
  tile="false"
  variant="elevated"
  width="400"
>
  <img
    alt=""
    data-v-f9aad838=""
    src="imageAsset"
    width="400"
  />
  <v-progress-linear-stub
    absolute="false"
    active="true"
    buffervalue="0"
    chunkgap="4"
    class="mt-n2"
    clickable="false"
    data-v-f9aad838=""
    height="8"
    indeterminate="false"
    location="top"
    max="100"
    modelvalue="100"
    reverse="false"
    roundedbar="false"
    stream="false"
    striped="false"
    tag="div"
    tile="false"
  />
  <v-card-title-stub
    class="flow-card-title"
    data-v-f9aad838=""
    tag="div"
  >
    Step 2
  </v-card-title-stub>
  <v-card-text-stub
    class="pb-2 px-6"
    data-v-f9aad838=""
    tag="div"
  >
    
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 2
      </p>
      <!--v-if-->
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-f9aad838=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      data-v-f9aad838=""
      tag="div"
    />
    <!--v-if-->
    <evocon-v-button-stub
      color="primary"
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Ok"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</v-card-stub>
`;

exports[`ProductTourFlowCard > renders correctly if tertiaryBtnText is missing 1`] = `
<v-card-stub
  border="false"
  data-v-f9aad838=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  theme="light"
  tile="false"
  variant="elevated"
  width="400"
>
  <img
    alt=""
    data-v-f9aad838=""
    src="imageAsset"
    width="400"
  />
  <v-progress-linear-stub
    absolute="false"
    active="true"
    buffervalue="0"
    chunkgap="4"
    class="mt-n2"
    clickable="false"
    data-v-f9aad838=""
    height="8"
    indeterminate="false"
    location="top"
    max="100"
    modelvalue="50"
    reverse="false"
    roundedbar="false"
    stream="false"
    striped="false"
    tag="div"
    tile="false"
  />
  <v-card-title-stub
    class="flow-card-title"
    data-v-f9aad838=""
    tag="div"
  >
    Step 1
  </v-card-title-stub>
  <v-card-text-stub
    class="pb-2 px-6"
    data-v-f9aad838=""
    tag="div"
  >
    
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 1 line 1
      </p>
      <br
        data-v-f9aad838=""
      />
    </div>
    <div
      data-v-f9aad838=""
    >
      <p
        class="text-body-large white-space-pre-line"
        data-v-f9aad838=""
      >
        Content 1 line 2
      </p>
      <!--v-if-->
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-f9aad838=""
    tag="div"
  >
    <!--v-if-->
    <v-spacer-stub
      data-v-f9aad838=""
      tag="div"
    />
    <!--v-if-->
    <evocon-v-button-stub
      color="primary"
      data-v-f9aad838=""
      icon=""
      iconcolor=""
      text="Next_noun"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</v-card-stub>
`;
